# micrograd.cpp

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  micrograd.sln  microgradConfig.cmake
cmake/: microgradConfig.cmake.in
examples/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  example_1.cpp  example_1.vcxproj  example_1.vcxproj.filters  example_2.cpp  example_2.vcxproj  example_2.vcxproj.filters
include/: engine.hpp
include/micrograd/: engine.hpp  nn.hpp
src/: test.cpp
